--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5665,7 +5665,9 @@ img{
 .mb-3{
   margin-bottom: 3%;
 }
-
+.fs-13{
+  font-size: 13px;
+}
 h1 {
   font-size: 33px;
   font-weight: bold;
@@ -5756,7 +5758,21 @@ h5 {
   bottom: 0;
   color: white;
 }  
-
+.titulo-blog{
+  position: absolute;
+  background-color: rgba(0,0,0,0.9);
+  color: white !important;
+  top: 55%;
+  padding: 1% 5%;
+}
+.titulo-destacado{
+  position: absolute;
+  background-color: rgba(0,0,0,0.9);
+  color: white !important;
+  width: 100%;
+  padding: 2% 4%;
+  bottom: 0;
+}
 .menu{
   height: 80px;
 }
